<resources>
    <string name="app_name">MobileSR</string>
    <string name="image_processing_dialog_text">Superresolution in progress...</string>
    <string name="image_processing_dialog_button">CANCEL</string>
    <string name="channel_name">Superresolution Notifications</string>
    <string name="channel_description">Channel for delivering notifications to inform the user that superresolution is complete</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="title_use_nnapi">Use NNAPI</string>
    <string name="pref_description_use_nnapi">Shows that app uses NNAPI</string>
    <string name="title_model_rescales">Model Rescales</string>
    <string name="pref_description_model_rescales">Shows that model rescales</string>

    <string name="title_input_image_width">Input Image Width</string>
    <string name="pref_default_input_image_width">256</string>
    <string name="title_input_image_height">Input Image Height</string>
    <string name="pref_default_input_image_height">256</string>
    <string name="title_rescaling_factor">Rescaling Factor</string>
    <string name="pref_default_rescaling_factor">2</string>

    <string name="title_model_name">Model Name</string>
    <string name="pref_default_model_name">SRCNN_NR_256</string>
    <string-array name="model_name_list_titles">
        <item>SRCNN_NR_256</item>
        <item>SRCNN_NR_128</item>
        <item>SRCNN_NR_64</item>
    </string-array>
    <string-array name="model_name_list_values">
        <item>SRCNN_NR_256</item>
        <item>SRCNN_NR_128</item>
        <item>SRCNN_NR_64</item>
    </string-array>

    <string name="title_parallel_batch_number">Parallel Batch Number</string>
    <string name="pref_default_parallel_batch_number">2</string>
    <string-array name="parallel_batch_number_list_titles">
        <item>2</item>
        <item>7</item>
        <item>30</item>
    </string-array>
    <string-array name="parallel_batch_number_list_values">
        <item>2</item>
        <item>7</item>
        <item>30</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
