<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_default_model_name"
        android:entries="@array/model_name_list_titles"
        android:entryValues="@array/model_name_list_values"
        android:key="model_name_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_model_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="use_nnapi_switch"
        android:summary="@string/pref_description_use_nnapi"
        android:title="@string/title_use_nnapi"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="@string/pref_default_parallel_batch_number"
        android:entries="@array/batch_size_values"
        android:entryValues="@array/batch_size_values"
        android:key="parallel_batch_number"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_parallel_batch_number" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
</PreferenceScreen>
